# http-analytics

./: .gitignore  Cargo.toml  README.md  clickhouse.sql  docker-compose-local.yml
ai-client/: Cargo.toml
ai-client/src/: lib.rs
ai-client/src/text/: gemini.rs  mod.rs  text.rs
config/: Cargo.toml
config/src/: analyze.rs  collect.rs  lib.rs
http/: Cargo.toml
http-analyze/: Cargo.toml  build.rs
http-analyze/prompt/: development.txt  schema.json
http-analyze/src/: main.rs  status.rs
http-analyze/src/api/: mod.rs
http-analyze/src/api/analyze/: mod.rs  query.rs
http-collect/: Cargo.toml  build.rs  create_session.lua
http-collect/public/: sdk.js
http-collect/src/: auth.rs  event.rs  main.rs  product.rs  response.rs  session.rs  status.rs
http-collect/src/api/: mod.rs
http-collect/src/api/event/: mod.rs
http-collect/src/api/event/app/: background.rs  foreground.rs  mod.rs
http-collect/src/api/event/auth/: login.rs  logout.rs  mod.rs  password_find_end.rs  password_find_start.rs  pre_login.rs  sign_in_end.rs  sign_in_start.rs
http-collect/src/api/event/board/: mod.rs  search_article.rs  search_board.rs  view_end.rs  view_end_article.rs  view_end_board.rs  view_start.rs  view_start_article.rs  view_start_board.rs  write_end.rs  write_start.rs
http-collect/src/api/event/cart/: add.rs  mod.rs  remove.rs  view_end.rs  view_start.rs
http-collect/src/api/event/category/: mod.rs  scroll.rs  view_end.rs  view_start.rs
http-collect/src/api/event/etc/: mod.rs  scroll.rs  view_end.rs  view_start.rs
http-collect/src/api/event/event/: mod.rs  scroll.rs  scroll_detail.rs  search.rs  view_end.rs  view_end_detail.rs  view_start.rs  view_start_detail.rs
http-collect/src/api/event/faq/: mod.rs  scroll.rs  search.rs  view_detail.rs  view_end.rs  view_start.rs
http-collect/src/api/event/main/: mod.rs  scroll.rs  view_end.rs  view_start.rs
http-collect/src/api/event/notice/: mod.rs  scroll.rs  search.rs  view_detail.rs  view_end.rs  view_start.rs
http-collect/src/api/event/order/: delivery_tracking.rs  mod.rs  view_end.rs  view_end_detail.rs  view_start.rs  view_start_detail.rs
http-collect/src/api/event/payment/: checkout_start.rs  mod.rs  payment_complete.rs  payment_start.rs  product_request.rs
http-collect/src/api/event/product/: like_add.rs  like_remove.rs  mod.rs  scroll.rs  search.rs  view_end.rs  view_start.rs
http-collect/src/api/session/: create.rs  mod.rs
http-collect/src/event/: mod.rs
http-collect/src/event/app/: background.rs  foreground.rs  mod.rs
http-collect/src/event/auth/: login.rs  logout.rs  mod.rs  password_find_end.rs  password_find_start.rs  pre_login.rs  sign_in_end.rs  sign_in_start.rs
http-collect/src/event/product/: mod.rs  start_view.rs
http/src/: lib.rs  response.rs
repository-click-house/: Cargo.toml
repository-click-house-macro/: Cargo.toml
repository-click-house-macro/src/: lib.rs
repository-click-house-read/: Cargo.toml
repository-click-house-read/src/: context.rs  lib.rs
repository-click-house/src/: context.rs  event.rs  lib.rs  session.rs
service-analyze/: Cargo.toml
service-analyze/src/: create_query.rs  lib.rs  query_executor.rs
service-collect/: Cargo.toml
service-collect/src/: event.rs  lib.rs  session.rs
