[package]
name = "http-analyze"
version = "0.1.0"
edition = "2024"

[features]
development = []
staging = []
production = []

[build-dependencies]
config = { path = "../config" }

[dependencies]
tokio = { version = "1.46.1", features = ["full"] }
serde_json = "1.0.141"
reqwest = { version = "0.12.22", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
config = { path = "../config" }
ai-client = { path = "../ai-client" }