[package]
name = "http"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.11.0"
serde = { version = "1.0.219", features = ["derive"] }
service-collect = { path = "../service-collect" }
repository-click-house = { path = "../repository-click-house" }
uuid = { version = "1.17.0", features = ["v4"] }
validator = { version = "0.20.0", features = ["derive"]}
anyhow = "1.0.98"