[package]
name = "http-collect"
version = "0.1.0"
edition = "2024"

[features]
development = []
staging = []
production = []

[build-dependencies]
config = { path = "../config" }

[dependencies]
time = "0.3"
actix-web = "4.11.0"
serde = { version = "1.0.219", features = ["derive"] }
service-collect = { path = "../service-collect" }
repository-click-house = { path = "../repository-click-house" }
repository-click-house-macro = { path = "../repository-click-house-macro" }
uuid = { version = "1.17.0", features = ["v4"] }
validator = { version = "0.20.0", features = ["derive"]}
anyhow = "1.0.98"
config = { path = "../config" }