[package]
name = "http-collect"
version = "0.1.0"
edition = "2024"

[features]
development = []
staging = []
production = []

[build-dependencies]
config = { path = "../config" }

[dependencies]
time = "0.3"
actix-web = "4.11.0"
actix-cors = "0.7"
actix-files = "0.6"
serde = { version = "1.0.219", features = ["derive"] }
service-collect = { path = "../service-collect" }
repository-click-house = { path = "../repository-click-house" }
repository-click-house-macro = { path = "../repository-click-house-macro" }
uuid = { version = "1.17.0", features = ["v4"] }
validator = { version = "0.20.0", features = ["derive"] }
config = { path = "../config" }
utoipa = { version = "5.4.0", features = ["macros", "actix_extras", "uuid"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["actix-web"] }
http = { path = "../http" }