[package]
name = "http"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.11.0"
serde = { version = "1.0.219", features = ["derive"] }
anyhow = "1.0.98"
validator = { version = "0.20.0", features = ["derive"]}
utoipa = { version = "5.4.0", features = ["macros", "actix_extras", "uuid"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["actix-web"] }