[package]
name = "repository-click-house"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
async-trait = "0.1.88"
clickhouse = "0.13.3"
uuid = { version = "1", features = ["serde", "v4"] }
anyhow = "1.0.98"
tokio = "1.46.1"
time = "0.3.41"
